# JCU

./: .ghci  .gitignore  CLI.hs  FUTURE-WORK  FUTURE-WORK.md  GUI.hs  JCU.cabal  Makefile  NOTES  Prolog.hs  PrologInHaskell.hs  README  README.md  example.prl  list.pro  start.sh  stop.sh  uglify.sh  upgrade.sh
config/: connection_string.conf  site-key.txt
packaging/: initPgSqlDb.sql
resources/: jcu.db
resources/static/: screen.css
resources/static/brunch/: config.yaml
resources/static/brunch/src/app/: main.coffee
resources/static/brunch/src/app/collections/: rules_collection.coffee  rules_list_collection.coffee  rules_tree_collection.coffee
resources/static/brunch/src/app/controllers/: main_controller.coffee
resources/static/brunch/src/app/models/: proof_tree.coffee  proof_tree_model.coffee  proof_tree_node.coffee  proof_tree_node_model.coffee  rule_model.coffee  rule_tree.coffee  rule_tree_node.coffee  term_model.coffee
resources/static/brunch/src/app/styles/: main.styl
resources/static/brunch/src/app/templates/: home.eco  proof_tree_item.eco  rules_list.eco  rules_list_item.eco  rules_tree.eco  rules_tree_item.eco
resources/static/brunch/src/app/views/: home_view.coffee  proof_tree_node_view.coffee  proof_tree_view.coffee  rule_list_item_view.coffee  rule_list_view.coffee  rule_tree_item_view.coffee  rule_tree_view.coffee  rules_list_item_view.coffee  rules_list_view.coffee  rules_tree_item_view.coffee  rules_tree_node_view.coffee  rules_tree_view.coffee
resources/static/docs/: home_view.html  main.html  main_controller.html  rule_model.html  rules_list_collection.html  rules_list_item_view.html  rules_list_view.html  rules_tree_collection.html  rules_tree_item_view.html  rules_tree_view.html
resources/static/hjs/: Array.hs  Models.hs  Prolog.hs  Templates.hs  Worker.hs  ajaxq.js  infinite.hs  jcu.hs  lib.hs  makefile  test.html
resources/static/hjs/Data/: Map.hs  Tree.hs
resources/static/hjs/testcases/: alert.hs
resources/templates/: check.tpl  echo.tpl  forbidden.tpl  index.tpl  layout.tpl  login.tpl  signup.tpl
src/: Application.hs  GUI.hs  Main.hs  Router.hs  Site.hs
src/JCU/: Handlers.hs  JSON.hs  Parser.hs  Prolog.hs  Templates.hs  Testing.hs  Types.hs  Util.hs
src/JCU/Prolog/: Parser.hs  Prolog.hs  Types.hs
src/JCU/Web/: Actions.hs  Handlers.hs  JSON.hs  Prolog.hs  Testing.hs  Types.hs  Util.hs
src/Language/Prolog/: NanoProlog.hs  royals.prl
trunk/: CLI.hs  GUI.hs  JCU.cabal  Makefile  NOTES  Prolog.hs  PrologInHaskell.hs  example1.prl
trunk/resources/static/brunch/src/app/collections/: rules_list_collection.coffee  rules_tree_collection.coffee
trunk/resources/static/brunch/src/app/templates/: home.eco  rules_list_item.eco  rules_tree.eco
trunk/resources/static/brunch/src/app/views/: home_view.coffee  rule_list_view.coffee  rule_tree_view.coffee  rules_list_item_view.coffee  rules_tree_item_view.coffee
trunk/resources/templates/: index.tpl  layout.tpl  login.tpl  signup.tpl
trunk/src/: Application.hs  EnableGUI.hs  Site.hs
trunk/src/JCU/: Parser.hs
trunk/src/JCU/Prolog/: Prolog.hs  Types.hs
trunk/src/JCU/Web/: Actions.hs  Types.hs
