Name:                JCU
Version:             0.2
Synopsis:            Online application for visualizing Prolog proof trees.
Description:         This package was developed to demonstrate the ideas behind
                     the Prolog language. It uses a very small interpreter
                     (@Language.Prolog.Nanoprolog@) which can be run on its
                     own.
                     .
                     This package contains an environment constructed for the
                     Junior College at Utrecht University. It provides a simpel
                     environment in which rules can be defined, and proofs can
                     be constructed interactively. The software can be
                     installed on a server, so students do not have to install
                     anything on their own machines.
License:             BSD3
license-file:        LICENSE
Author:              Jurriën Stutterheim, Doaitse Swierstra
Maintainer:          Jurriën Stutterheim <j.stutterheim@uu.nl>
Homepage:            http://www.cs.uu.nl/wiki/PrologJCU
Stability:           Experimental
Category:            Web
Build-type:          Simple
Cabal-version:       >= 1.6
Extra-Source-Files:  README, FUTURE-WORK, examples/*

Source-repository head
  Type:       git
  Location:   https://github.com/norm2782/JCU.git

Flag development
  Description: Whether to build the server in development (interpreted) mode
  Default: False

Executable jcu
  hs-source-dirs: src
  main-is: Main.hs

  Build-depends:
    base >= 4 && < 5,
    bytestring >= 0.9.1 && < 0.10,
    heist >= 0.5 && < 0.6,
    MonadCatchIO-transformers >= 0.2.1 && < 0.3,
    mtl >= 2 && < 3,
    snap >= 0.4,
    snap-core >= 0.4,
    snap-server >= 0.4,
    text >= 0.11 && < 0.12,
    time >= 1.1 && < 1.3,
    xmlhtml >= 0.1,
    snap-auth >= 0.1,
    snap-extension-mongodb >= 0.3.3,
    mongoDB >= 0.9,
    bson >= 0.1.3,
    aeson >= 0.3,
    uu-parsinglib >= 2.7.1,
    email-validate >= 0.2,
    containers >= 0.4,
    transformers >= 0.2,
    attoparsec >= 0.8.5 && < 0.9,
    ListLike >= 3.1 && < 3.2,
    containers >= 0.4 && < 0.5,
    NanoProlog >= 0.2.2

  extensions:
        TypeSynonymInstances
      , OverloadedStrings
      , MultiParamTypeClasses
      , FunctionalDependencies
      , DeriveDataTypeable
      , FlexibleInstances

  if flag(development)
    cpp-options: -DDEVELOPMENT
    build-depends: hint >= 0.3.2 && < 0.4
    -- In development mode, speed is already going to suffer, so skip
    -- the fancy optimization flags.  Additionally, disable all
    -- warnings.  The hint library doesn't give an option to execute
    -- compiled code when there were also warnings, so disabling
    -- warnings allows quicker workflow.
    ghc-options: -threaded -w
  else
    if impl(ghc >= 6.12.0)
      ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
                   -fno-warn-orphans -fno-warn-unused-do-bind
    else
      ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
                   -fno-warn-orphans

Library
  Extensions:
        TypeSynonymInstances
      , OverloadedStrings
      , MultiParamTypeClasses
      , FunctionalDependencies
      , DeriveDataTypeable
      , FlexibleInstances

  Build-Depends:	  base >= 4.0 && < 5.0
  Hs-Source-Dirs:   src
  Exposed-modules:  JCU.Types, JCU.Prolog
